--- a/src/CommunityToolkit.Datasync.Server.Abstractions/CommunityToolkit.Datasync.Server.Abstractions.csproj
+++ b/src/CommunityToolkit.Datasync.Server.Abstractions/CommunityToolkit.Datasync.Server.Abstractions.csproj
@@ -3,6 +3,7 @@
     <Description>Abstractions for developing server-side applications using the Datasync Toolkit.</Description>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.OData.Core" />
     <PackageReference Include="Microsoft.Spatial" />
   </ItemGroup>
 </Project>
